fleshing out default template and static content

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,38 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Style-Type" content="text/css" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<title>Microtasking - We do stuff for you</title>
+<link rel="stylesheet" href="static/style.css" type="text/css" media="screen" />
+</head>
 <body>
-<div id="wrapper" align="center">
- <div id="content">
- <div id="head">
-  <h1>Mostly MT</h1>
-  <h2>Enter your demands below</h2>
-  <hr noshade="noshade" />
-  
+<div class="wrapper">
+<h1><a href=""><span>Microtasking</span></a></h1>
+<dl>
+<dt>microtask:</dt>
+<dd><em>n.</em> A simple but time-consuming task that someone else could do for you.</dd>
+</dl>
+<form action="" method="post">
+<h3>Step 1 - Describe your microtask</h3>
+<p class="hint">Hint: It should take about an hour or less to complete. <span class="small"><a href="#ideas">need ideas?</a></span></p>
+<p><textarea name="description"></textarea></p>
+<h3>Step 2 - Contact info</h3>
+<p>In case we have any questions - your satisfaction is our top priority.</p>
+<p><label>Email: <input name="email" /></label></p>
+<p><label>Phone: <input name="phone" /></label></p>
+<h3>Step 3 - Checkout</h3>
+<p>Proceed to the checkout for payment options.</p>
+<p><input class="button" type="submit" value="Checkout &rarr;" /></p>
+</form>
+<h3 id="ideas">Ideas</h3>
+<ul>
+<li>Send someone some flowers.</li>
+<li>Gather information on a subject.</li>
+<li>Find me a local business that does housecleaning.</li>
+</ul>
+</div>
 </body>
 </html>
+
