--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -1,8 +1,8 @@
 <p>Current Tickets</p>
-<ul>
+<ul class="tickets">
 {% for ticket in tickets %}
 {% ifchanged ticket.timestamp.date %}
-<li><div class="date">{{ ticket.timestamp.date }}</div></li>
+<li class="break"><span class="date">{{ ticket.timestamp.date }}</span></li>
 {% endifchanged %}
 <li>
   <div class="time">{{ ticket.timestamp|date:"P" }}</div>
@@ -11,4 +11,3 @@
 </li>
 {% endfor %}
 </ul>
-
