--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,1 +1,9 @@
-
+<p>Thank you for your interest! But we are currently over capacity.</p>
+<p>
+  In the meantime, please spend this time thinking up a list of microtasks you need.
+  When we are able to support more users, we will gladly get right to it!
+</p>
+<p>
+  Thanks again;<br />
+  The Microtask Team
+</p>
