--- a/templates/index.html
+++ b/templates/index.html
@@ -24,4 +24,4 @@
 <li>Gather information on a subject.</li>
 <li>Find me a local business that does housecleaning.</li>
 </ul>
-
+<p>Do you have more questions? Check out the <a href="/faq">FAQ</a></p>
