implemented promotions, added 'pinkribbon' promotion as an example, broke out features from featureset, created handlers dir to house RequestHandler subclasses, renamed some files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <p>Give us a microtask, and we'll take care of it for <strong>{{ currency }}{{ price }}</strong>. <span class="small info"><a href="#pricing">more info?</a></span></p>
+{% if promo_intro %}<p>{{ promo_intro }}</p>{% endif %}
 <dl>
 <dt>microtask:</dt>
 <dd><em>n.</em> A simple task that someone else could do for you remotely.</dd>
