--- a/templates/outer.html
+++ b/templates/outer.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <link rel="shortcut icon" href="/favicon.ico" />
-<link rel="stylesheet" href="static/style.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="static/base.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="static/{{ stylesheet }}.css" type="text/css" media="screen" />
 <title>Microtasking - {{ tagline }}</title>
 </head>
