added new faq item

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,6 +1,16 @@
 <h3>What are Microtasks?</h3>
 <p>Any short (less than 1 hour) task that can be easily defined and delegated to someone else</p>
 
+<h3>Who is this for?</h3>
+<p>
+  Anyone! No signup cost. No monthly fees. No minimums. Here are the microtask steps:
+  <ol>
+  <li>Give us a small task</li>
+  <li>We do it</li>
+  </ol>
+  That's it! You sit back and relax. Warning: microtasking can be addictive.
+</p>
+
 <h3>What kinds of tasks can I delegate?</h3>
 <p>
   Anything that can be done remotely in under an hour with more than 24 hours notice.
