changing Ticket to Expando, adding features to saved tickets, streamlining checkout post implementation, hiding background png for pinkribbon IE 6 viewers

--- a/static/pinkribbon.css
+++ b/static/pinkribbon.css
@@ -8,5 +8,6 @@ body {
   background-position: top right;
   background-repeat: no-repeat;
   background-image: url("/images/pinkribbon.png");
+  *background-image: none; /* IE 6 - no png 32 transparency */
 }
 
