current state of google checkout code

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <dt>microtask:</dt>
 <dd><em>n.</em> A simple task that someone else could do for you remotely.</dd>
 </dl>
-<form action="/checkout" method="post">
+<form action="/gcheckout" method="post">
 <input type="hidden" name="promo" value="{{ promo }}" />
 <h3>Step 1 - Describe your microtask</h3>
 <p class="hint">Hint: It should take about an hour or less to complete. <span class="small ideas"><a href="#ideas">need ideas?</a></span></p>
