--- a/templates/outer.html
+++ b/templates/outer.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="wrapper">
-<h1><a href=""><span>Microtasking</span></a></h1>
+<h1 class="title"><a href=""><span>Microtasking</span></a></h1>
 {{ content }}
 </div>
 </body>
