--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <input type="hidden" name="promo" value="{{ promo }}" />
 <fieldset>
 <legend><span class="step">Step 1:</span> Describe your microtask</legend>
-<p class="hint">It should take about an hour or less to complete. <span class="small ideas"><a href="#ideas">need ideas?</a></span></p>
+<p class="hint">It should take one hour or less to complete. <span class="small ideas"><a href="#ideas">need ideas?</a></span></p>
 <p><textarea name="description"></textarea></p>
 </fieldset>
 <fieldset>
