base checkout binding on Ticket key rather than email (which could have been changed)

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -23,7 +23,26 @@
   </ul>
 </p>
 
-<h3>How specific do I have to be?</h3>
+<h3>Who does these tasks?</h3>
+<p>
+  We hand off the task to the members of our staff most qualified to do the job.
+  If your task requires computer experience, you will get an IT graduate. The
+  same pattern applies for anything from spot-checking documents, to making phone calls
+  on your behalf, <em>et cetera</em>. Anything that requires special knowledge will
+  be given to a qualified Task Manager.
+</p>
+
+<!-- h3>So... if you hire some college grads, how can you keep costs low?</h3>
+<p>
+  A combination of two factors:
+  <ol>
+  <li>We spread special expertise around to the tasks that need it. <a href="http://en.wikipedia.org/wiki/Economy_of_scale">Economy of scale</a>.</li>
+  <li>Most tasks don&apos;t require special expertise</li>
+  </ol>
+  With everyone playing their part, it just works, and works well.
+</p -->
+
+<h3>How specific do I have to be when requesting my microtask?</h3>
 <p>
   The more specific the better. Remember, the assistant performing your microtask only has limited
   information about you.
