--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <link rel="shortcut icon" href="/favicon.ico" />
-<link rel="stylesheet" href="static/base.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="static/admin.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../static/base.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../static/admin.css" type="text/css" media="screen" />
 <title>Microtasking - Admin</title>
 </head>
 <body>
