added IDs to each heading for direct # target linking + added section for longer tasks

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,7 +1,7 @@
-<h3>What are Microtasks?</h3>
+<h3 id="definition">What are Microtasks?</h3>
 <p>Any short (less than 1 hour) task that can be easily defined and delegated to someone else</p>
 
-<h3>Who is this for?</h3>
+<h3 id="who">Who is this for?</h3>
 <p>Anyone! No signup cost. No monthly fees. No minimums. Here are the microtask steps:</p>
 <ol>
 <li>Give us a small task</li>
@@ -9,7 +9,7 @@
 </ol>
 <p>That's it! You sit back and relax, we'll email you when it's done.</p>
 
-<h3>What kinds of tasks can I delegate?</h3>
+<h3 id="ideas">What kinds of tasks can I delegate?</h3>
 <p>
   Anything that can be done remotely in under an hour with more than 24 hours notice.
   Yes really, anything. Here are some examples:
@@ -23,7 +23,7 @@
   </ul>
 </p>
 
-<h3>Who does these tasks?</h3>
+<h3 id="taskers">Who does these tasks?</h3>
 <p>
   We hand off the task to the members of our staff most qualified to do the job.
   If your task requires computer experience, you will get an IT graduate. The
@@ -42,8 +42,18 @@
   With everyone playing their part, it just works, and works well.
 </p -->
 
-<h3>How specific do I have to be when requesting my microtask?</h3>
+<h3 id="specifics">How specific do I have to be when requesting my microtask?</h3>
 <p>
   The more specific the better. Remember, the assistant performing your microtask only has limited
   information about you.
+</p>
+
+<h3 id="time">What if my microtask takes more than one hour?</h3>
+<p>
+  At this time we focus exclusively on tasks that take an hour or less.  If your task would obviously take longer,
+  we will alert you by email before beginning any work and you will not be charged.
+</p>
+<p>
+  Having said that, you might be surprised what can be accomplished in one hour's time by our <a href="#taskers">dedicated staff</a>.
+  Your satisfaction is our highest priority, and we continually strive to complete every task dilligently and quickly.
 </p>
