added more FAQ links, and set them all to open in a new tab/window with target=_blank

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
 <div id="pricing">
 <h3>Pricing</h3>
 <p>Tasks up to 1 hour cost {{ currency }}{{ price }} to complete.  If additional time is needed to complete the task, we'll email you first.</p>
+<p>More info is available in the <a href="/faq#time" target="_blank">FAQ</a></p>
 </div>
 <div id="ideas">
 <h3>Ideas</h3>
@@ -41,5 +42,6 @@
 <li>Gather information on a subject.</li>
 <li>Find me a local business that does housecleaning.</li>
 </ul>
+<p>More ideas are listed in the <a href="/faq#ideas" target="_blank">FAQ</a></p>
 </div>
-<p>Do you have more questions? Check out the <a href="/faq">FAQ</a></p>
+<p>Do you have more questions? Check out the <a href="/faq" target="_blank">FAQ</a></p>
