--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,6 +1,9 @@
 <h3 id="definition">What are Microtasks?</h3>
 <p>Any short (less than 1 hour) task that can be easily defined and delegated to someone else</p>
 
+<h3 id="why">Why?</h3>
+<p>Because you&apos;re busy.</p>
+
 <h3 id="who">Who is this for?</h3>
 <p>Anyone! No signup cost. No monthly fees. No minimums. Here are the microtask steps:</p>
 <ol>
