--- a/templates/outer.html
+++ b/templates/outer.html
@@ -13,6 +13,9 @@
 <h1 class="title"><a href=""><span>Microtasking</span></a></h1>
 {{ content }}
 </div>
+<div class="footer">
+  &copy;2009 <a href="">MicroTasking.net</a>
+</div>
 <div id="popup" class="popup" style="display:none">
 <a href="" class="close"><span>close</span></a>
 </div>
