fixing two bugs - now only anchors with class 'pop' will do the div popup, and height of popup is anchored by the scroll height, not the document

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <dt>microtask:</dt>
 <dd><em>n.</em> A simple task that someone else could do for you remotely.</dd>
 </dl>
-<p id="intro">Give us a <strong>microtask</strong>, and we'll take care of it for <strong>{{ currency }}{{ price }}</strong> <span class="small info"><a href="#pricing">more info?</a></span></p>
+<p id="intro">Give us a <strong>microtask</strong>, and we'll take care of it for <strong>{{ currency }}{{ price }}</strong> <span class="small info"><a href="#pricing" class="pop">more info?</a></span></p>
 {% if promo_intro %}<p>{{ promo_intro }}</p>{% endif %}
 {% if validation_error %}<p class="error"><span>{{ validation_error }}</span></p>{% endif %}
 <form action="/checkout" method="post">
@@ -10,7 +10,7 @@
 {% if key %}<input type="hidden" name="key" value="{{ key|escape }}" />{% endif %}
 <fieldset>
 <legend><span class="step">Step 1:</span> Describe your microtask</legend>
-<p class="hint">It should take one hour or less to complete. <span class="small ideas"><a href="#ideas">need ideas?</a></span></p>
+<p class="hint">It should take one hour or less to complete. <span class="small ideas"><a href="#ideas" class="pop">need ideas?</a></span></p>
 <p><textarea name="description">{{ description|escape }}</textarea></p>
 {% if description_error %}<p class="validation-error"><span>* {{ description_error }}</span></p>{% endif %}
 </fieldset>
