--- a/templates/outer.html
+++ b/templates/outer.html
@@ -20,6 +20,15 @@
 <a href="" class="close"><span>close</span></a>
 </div>
 <script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-9692232-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+<script type="text/javascript">
 (function(){
 	var
 		href = document.location.href,
