--- a/templates/outer.html
+++ b/templates/outer.html
@@ -11,10 +11,15 @@
 <body>
 <div class="wrapper">
 <h1 class="title"><a href=""><span>Microtasking</span></a></h1>
+{% if sandbox %}<div id="sandbox">... SANDBOX ...</div>{% endif %}
 {{ content }}
+{% if sandbox %}<div id="sandbox">... SANDBOX ...</div>{% endif %}
+</div>
+<div class="linkbar">
+  <a href="/faq">FAQ</a> | <a href="http://microtasking.blogspot.com/">Blog</a> | <a href="https://twitter.com/microtasking">Twitter</a>
 </div>
 <div class="footer">
-  &copy;2009 <a href="">MicroTasking.net</a>
+  <p>&copy;2009 <a href="">MicroTasking.net</a></p>
 </div>
 <div id="popup" class="popup" style="display:none">
 <a href="" class="close"><span>close</span></a>
