adding /about page

--- a/static/base.css
+++ b/static/base.css
@@ -140,7 +140,7 @@ label input {
   text-align:center;
   font-size:.8em;
 }
-#sandbox {
+.sandbox {
   text-align:center;
   font-size:1.5em;
   color:red;
