fixing h1.title bar to be clickable

--- a/static/standard.css
+++ b/static/standard.css
@@ -38,6 +38,7 @@ h1.title {
   background:url('images/title.png') no-repeat 20px top;
 }
 h1.title a {
+  display:block;
   width:550px;
   height:50px;
 }
