--- a/templates/outer.html
+++ b/templates/outer.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="wrapper">
-<h1 class="title"><a href=""><span>Microtasking</span></a></h1>
+<h1 class="title"><a href="/{{ promo }}"><span>Microtasking</span></a></h1>
 {% if sandbox %}<div class="sandbox">... SANDBOX ...</div>{% endif %}
 {{ content }}
 {% if sandbox %}<div class="sandbox">... SANDBOX ...</div>{% endif %}
