slight about page word changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,15 +6,14 @@
 	resonable fee.
 </p>
 <p>
-	Microtasking<sup>sm</sup> (the company) is a sitededicated to facilitating your 
-	experience by providing the lowest possible barrier to getting started.
+	Microtasking<sup>sm</sup> (the company) is dedicated to facilitating the
+	above concept by providing the lowest possible barrier to start.
 </p>
 
 <h3 id="how">How does it work?</h3>
 <p>
-	We believe that there is beuaty in simplicity.  All you have to do is provide us
-	with a task that takes about an hour to complete, agree to pay, and we'll take 
-	care of it.
+	We believe that there is beauty in simplicity.  Simply provide us with a task that
+	takes about an hour to complete, pay by credit card, and we'll take care of it.
 </p>
 <p>
 	More information about how microtasking works can be found in our <a href="/faq">FAQ</a>.
