--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -2,6 +2,7 @@
 <span class="date">{{ ticket.timestamp|date:"M d P" }}</span>
 <ul>
 <li><span class="label">Payment Status</span> <span class="value">{{ ticket.financial_order_state }}</span></li>
+<li><span class="label">Hours</span> <span class="value">{{ ticket.hours }}</span></li>
 <li><span class="label">Name</span> <span class="value">{{ ticket.name }}</span></li>
 <li><span class="label">Email</span> <span class="value">{{ ticket.email }}</span></li>
 <li><span class="label">Address</span>
