add hr to headline

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <dt>microtask:</dt>
 <dd><em>n.</em> A simple task that someone else could do for you remotely.</dd>
 </dl>
-<p id="intro">Give us a <strong>microtask</strong>, and we'll take care of it for <strong>{{ currency }}{{ price }}</strong> <span class="small info"><a href="#pricing" class="pop">more info?</a></span></p>
+<p id="intro">Give us a <strong>microtask</strong>, and we'll take care of it for <strong>{{ currency }}{{ price }}</strong>/hr <span class="small info"><a href="#pricing" class="pop">more info?</a></span></p>
 {% if promo_intro %}<p>{{ promo_intro }}</p>{% endif %}
 {% if validation_error %}<p class="error"><span>{{ validation_error }}</span></p>{% endif %}
 <form action="" method="post">
