--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 </fieldset>
 <fieldset>
 <legend><span class="step">Step 1:</span> Describe your microtask</legend>
-<p class="hint">Ideally it should one hour or less to complete. <span class="small ideas"><a href="#ideas" class="pop">need ideas?</a></span></p>
+<p class="hint">Ideally it should take one hour or less to complete. <span class="small ideas"><a href="#ideas" class="pop">need ideas?</a></span></p>
 <p><textarea name="description">{{ description|escape }}</textarea></p>
 {% if description_error %}<p class="validation-error"><span>* {{ description_error }}</span></p>{% endif %}
 <p>
